25 September 2018: Wouter
	- Perform TLS SNI indication of the host that is being contacted
	  for DNS over TLS service.  It sets the configured tls auth name.
	  This is useful for hosts that apart from the DNS over TLS services
	  also provide other (web) services.
	- Add SSL cleanup for tcp timeout.

17 September 2018: Wouter
	- Fix compile on Mac for unbound, provide explicit_bzero when libc
	  does not have it.
	- Fix unbound for openssl in FIPS mode, it uses the digests with
	  the EVP call contexts.
	- Fix that with harden-below-nxdomain and qname minisation enabled
	  some iterator states for nonresponsive domains can get into a
	  state where they waited for an empty list.
	- Stop UDP to TCP failover after timeouts that causes the ping count
	  to be reset by the TCP time measurement (that exists for TLS),
	  because that causes the UDP part to not be measured as timeout.
	- Fix #4156: Fix systemd service manager state change notification.

13 September 2018: Wouter
	- Fix seed for random backup code to use explicit zero when wiped.
	- exit log routine is annotated as noreturn function.
	- free memory leaks in config strlist and str2list insert functions.
	- do not move unused argv variable after getopt.
	- Remove unused if clause in testcode.
	- in testcode, free async ids, initialise array, and check for null
	  pointer during test of the test.  And use exit for return to note
	  irregular program stop.
	- Free memory leak in config strlist append.
	- make sure nsec3 comparison salt is initialized.
	- unit test has clang analysis.
	- remove unused variable assignment from iterator scrub routine.
	- check for null in delegation point during iterator refetch
	  in forward zone.
	- neater pointer cast in libunbound context quit routine.
	- initialize statistics totals for printout.
	- in authzone check that node exists before adding rrset.
	- in unbound-anchor, use readwrite memory BIO.
	- assertion in autotrust that packed rrset is formed correctly.